--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
+    "dictionary-en": "^4.0.0",
     "html2canvas": "^1.4.1",
+    "nspell": "^2.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -45,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.7"
+    "tailwindcss": "^3.4.7",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
