--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
+    "crypto-js": "^4.2.0",
     "dictionary-en": "^4.0.0",
     "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
