--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spring": "^9.7.4",
     "redux": "^5.0.1",
     "swiper": "^11.1.9",
